--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@expo/vector-icons": "^14.0.1",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
-    "lottie-react-native": "^6.7.2",
+    "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-gesture-handler": "^2.16.1",
-    "react-native-reanimated": "^3.10.0",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-reanimated": "^3.6.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
